vocativ-darknet-microsite/client/styles/curtain.scss
@import "shared";
@import "utils/glitch";

$shadowColor: $BLACK;
$curtainTextBackgroundColor: $BLACK;
$backgroundColor: $DARKGRAY;
$textColor: $BEIGE;

$curtainTextMaxWidth: 767px;
$curtainHideWidth: 767px;

$curtainTextVerticalGradient: radial-gradient(ellipse,
  rgba($curtainTextBackgroundColor, 1.0) 50%,
  rgba($curtainTextBackgroundColor, 0)
);

.curtain {
  @include pin-top-left;
  @include fill-screen;
  z-index: $curtainZIndex;
  box-shadow: 0 1px 20px rgba($shadowColor, 0.8);
  background: $backgroundColor;

  // No curtain on small screens
  @include bp($curtainHideWidth) {
    display: none;
  }

  .curtain-image {
    overflow: hidden;

    img {
      height: 100vh;
      object-fit: cover;

      @include kenburns;
    }
  }

  .curtain-text {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    text-align: center;

    display: flex;
    flex-direction: column;
    justify-content: flex-end;

    max-width: $curtainTextMaxWidth;
    margin: 0 auto;
    padding: 30px 0;
    color: $textColor;

    background: $curtainTextVerticalGradient;
    box-shadow: 0 1px 20px rgba($shadowColor, 0.8);

    .header {
      font-size: 8rem;
      font-weight: 900;
      .glitch {
        @include textGlitch("curtain-header", 17, white, rgba($curtainTextBackgroundColor, 1), red, red, 600, 128);

        &:first-child {
          margin-right: 0.25em;
        }
      }
    }

    .subheader {
      @include flex-center;
      font-size: 2rem;
      div { margin: 0 0.5rem; }
      .logo {
        width: 10rem;
        color: $WHITE;
      }
    }
  }
}

// curtain rules that affect the main layout
.main-layout.curtain-on {
  min-height: calc(3.5 * 100vh);

  .main-content-container {
    @include pin-top-left;
    position: fixed;
  }

  .footer-container {
    position: fixed;

    // Push it down just enough so it's not visible
    top: calc(100vh + 1px);
  }
}

.main-layout:not(.curtain-on) {
  .main-content-container {
    .home {
      margin-top: 100vh;

      @include bp($curtainHideWidth) {
        margin-top: 0;
      }
    }
  }
}

